[project]
name = "Algorithmes"
version = "0.0.1"
authors = [
  { name="David", email="davidddpereiraaa6@gmail.com" },
]
description = "Une implémentation de nouvelles structures de données et algorithmes en Python."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Issues = "https://github.com/AliiiBenn/Algorithmes"